--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,7 @@
 <resources>
 
     <style name="globalTheme" parent="Theme.AppCompat.NoActionBar">
-
         <item name="android:statusBarColor">@color/transparent</item>
-
     </style>
 
     <style name="listActivityTheme" parent="Theme.AppCompat.NoActionBar">
@@ -30,5 +28,20 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:letterSpacing">0.05</item>
     </style>
+
+    <!-- Inventory styles -->
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="details_title">
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+    <!-- Inventory styles -->
 
 </resources>
