Added sharing feature

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,8 +33,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+
+        <item name="android:windowBackground">@color/light_gray</item>
+        <item name="colorPrimary">@color/backgroundPrimary</item>
+        <item name="colorPrimaryDark">@color/backgroundPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
