--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -23,4 +23,8 @@
         android:id="@+id/action_delete_all_data"
         android:title="@string/menu_delete_all_data"/>
 
+    <item
+        android:id="@+id/action_share"
+        android:title="@string/menu_share"/>
+
 </menu>
